--- a/weMarketAdmin/client/products/productsList.html
+++ b/weMarketAdmin/client/products/productsList.html
@@ -1,3 +1,87 @@
 <template name="productsList">
+<style>
+.nav-pills>li.active>a, .nav-pills>li.active a:hover, .nav-pills>li.active a:focus{
+  color: #444;
+  background-color: #f7f7f7;
+}
+</style>
 
+<section class="content-header">
+  <h1>商品管理</h1>
+</section>
+
+<section class="content">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="box box-solid">
+        <div class="box-header with-border">
+          <h3 class="box-title">分类列表</h3>
+        </div>
+        <div class="box-body no-padding">
+          <ul class="nav nav-pills nav-stacked">
+            <li class="active ">
+              <a href="/productsList/">全部分类<span class="label label-primary pull-right">12</span></a>
+            </li>
+            <li>
+              <a href="/productsList/all">全部分类<span class="label label-primary pull-right">12</span></a>
+            </li>
+            <li>
+              <a href="/productsList/all">全部分类<span class="label label-primary pull-right">12</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-9">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">商品列表</h3>
+          <div class="box-tools pull-right">
+            <div class="has-feedback">
+              <input type="text" class="form-control input-sm" placeholder="搜索商品">
+              <span class="fa fa-search form-control-feedback"></span>
+            </div>
+          </div>
+        </div>
+        <div class="box-body no-padding">
+          <div class="mailbox-controls">
+            <button type="button" class="btn btn-default btn-sm checkbox-toggle">
+              <i class="fa fa-square-o"></i>
+            </button>
+            <div class="pull-right">
+              1-50/200
+              <div class="btn-group">
+                <button type="button" class="btn btn-default btn-sm checkbox-toggle">
+                  <i class="fa fa-chevron-left"></i>
+                </button>
+                <button type="button" class="btn btn-default btn-sm checkbox-toggle">
+                  <i class="fa fa-chevron-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="table-responsive mailbox-messages">
+            <table class="table table-hover table-striped">
+              <thead>
+                <tr>
+                  <th>分类排序</th>
+                  <th>分类名称</th>
+                  <th>分类描述</th>
+                  <th style="width:160px; text-align:center;">操作</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="box-footer no-padding">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </template>
