product add step 2

--- a/weMarketAdmin/client/products/productsAdd.html
+++ b/weMarketAdmin/client/products/productsAdd.html
@@ -26,14 +26,17 @@
         </div>
         <div class="box-body no-padding">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active ">
-              <a href="/productsList/">全部分类<span class="label label-primary pull-right">12</span></a>
+            <li class="addImages">
+              <i class="fa fa-plus"></i>
             </li>
-            <li>
-              <a href="/productsList/all">全部分类<span class="label label-primary pull-right">12</span></a>
+            <li class="imageLists">
+              <img src="https://img.alicdn.com/tps/TB1dDT4LXXXXXabaXXXXXXXXXXX-576-840.jpg"/>
             </li>
-            <li>
-              <a href="/productsList/all">全部分类<span class="label label-primary pull-right">12</span></a>
+            <li class="imageLists">
+              <img src="https://img.alicdn.com/tps/TB1dDT4LXXXXXabaXXXXXXXXXXX-576-840.jpg"/>
+            </li>
+            <li class="imageLists">
+              <img src="https://img.alicdn.com/tps/TB1dDT4LXXXXXabaXXXXXXXXXXX-576-840.jpg"/>
             </li>
           </ul>
         </div>
@@ -47,19 +50,19 @@
         </div>
         <div class="box-body no-padding">
           <div class="form-group">
-            <input type="text" name="title" id="title" class="form-control" placeholder="请输入名称">
+            <input type="text" name="title" id="title" class="form-control dashed-input-top" placeholder="请输入名称">
           </div>
           <div class="form-group">
-            <textarea name="desc" id="desc" rows="3" class="form-control" placeholder="请输入简述"></textarea>
+            <textarea name="desc" id="desc" rows="3" class="form-control dashed-input-top" placeholder="请输入简述"></textarea>
           </div>
           <div class="form-group">
-            <select class="form-control">
+            <select class="form-control dashed-input">
               <option>选择商品分类</option>
               <option> 分类1</option>
               <option>分类2</option>
             </select>
           </div>
-          <div class="row">
+          <div class="row" style="margin:10px 0">
             <div class="col-md-4">
               <div class="input-group">
                 <input type="number" name="title" id="title" class="form-control" placeholder="原价">
