--- a/weMarketAdmin/client/products/productsList.html
+++ b/weMarketAdmin/client/products/productsList.html
@@ -16,7 +16,7 @@
   <div style="background: #fff; margin: 0; padding: 10px; min-height: 54px;" class="box box-solid">
     <h4 class="pull-left">商品管理</h4>
     <div class="box-tools pull-right">
-      <a href="/products/add"><button type="button" class="btn bg-purple">新增</button></a>
+      <a href="/products/new?t=add"><button type="button" class="btn bg-purple">新增</button></a>
     </div>
   </div>
   <div class="row">
@@ -28,11 +28,11 @@
         <div class="box-body no-padding">
           <ul class="nav nav-pills nav-stacked">
             <li class="active ">
-              <a href="/productsList/">全部分类<span class="label label-primary pull-right">12</span></a>
+              <a href="/products/list/all">全部分类</a>
             </li>
             {{#each categories}}
-            <li>
-              <a href="/productsList/{{_id}}">{{name}}<span class="label label-primary pull-right">12</span></a>
+            <li id="{{_id}}" class="categoriy_item">
+              <a href="javascript:void(0);">{{name}}</a>
             </li>
             {{/each}}
           </ul>
@@ -73,13 +73,32 @@
             <table class="table table-hover table-striped">
               <thead>
                 <tr>
-                  <th>分类排序</th>
-                  <th>分类名称</th>
-                  <th>分类描述</th>
+                  <th>
+                      <input type="checkbox"/>
+                  </th>
+                  <th>商品名称</th>
+                  <th>商品描述</th>
+                  <th>单价</th>
+                  <th>优惠价</th>
+                  <th>库存</th>
                   <th style="width:160px; text-align:center;">操作</th>
                 </tr>
               </thead>
               <tbody>
+                {{#each products}}
+                <tr>
+                  <td><input type="checkbox"/></td>
+                  <td>{{name}}</td>
+                  <td style="max-width: 200px;overflow: hidden;">{{desc}}</td>
+                  <td>￥{{unit_price}}.00</td>
+                  <td>￥{{sale_price}}.00</td>
+                  <td>{{number}}</td>
+                  <td style="text-align: center;">
+                    <button id="{{_id}}" type="button" class="modifyProduct btn btn-xs bg-purple"> 修改</button>
+                    <button id="{{_id}}" type="button" class="delProduct btn btn-xs bg-red"> 删除</button>
+                  </td>
+                </tr>
+                {{/each}}
               </tbody>
             </table>
           </div>
