Admin: 添加批量删除商品按钮

--- a/weMarketAdmin/client/products/productsList.html
+++ b/weMarketAdmin/client/products/productsList.html
@@ -53,9 +53,7 @@
         </div>
         <div class="box-body no-padding">
           <div class="mailbox-controls">
-            <button type="button" class="btn btn-default btn-sm checkbox-toggle">
-              <i class="fa fa-square-o"></i>
-            </button>
+            <button type="button" class="btn btn-danger btn-sm">批量删除</button>
             <div class="pull-right">
               1-50/200
               <div class="btn-group">
