--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -36,7 +36,7 @@
   <ul class="product-list">
   {{#each products}}
     <li class="product-item">
-      <a href="/">
+      <a href="/product/{{_id}}">
       <img src="http://shop.ectouch.cn/v2/images/201509/thumb_img/17919_thumb_G_1441858552832.jpg"/>
       <div class="product-info">
         <h3 class="product-name">{{name}}</h3>
