添加到购物车

--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -74,8 +74,8 @@
       </div>
 
       <div class="filter-btn dis-box" style="display: flex;">
-        <a type="button" class="btn-cart button" style="flex: 1; margin: 0 5px;">加入购物车</a>
-        <a type="button" class="btn-submit button" style="flex: 1; margin: 0 5px;">立即购买</a>
+        <a type="button" class="btn-cart button btn-addCart" style="flex: 1; margin: 0 5px;">加入购物车</a>
+        <a type="button" class="btn-submit button btn-Buy" style="flex: 1; margin: 0 5px;">立即购买</a>
       </div>
     </div>
   </div>
