从购物车中移除商品

--- a/weMarketWeb/client/shopping/shopping.html
+++ b/weMarketWeb/client/shopping/shopping.html
@@ -11,6 +11,7 @@
         <input type="text" value="{{product_num}}" name="number" id="goods_number" autocomplete="off">
         <a class="num-plus" onclick="changePrice('3')"></a>
       </div>
+      <div class="remove-product" id="{{_id}}"><i class="fa fa-trash-o"></i></div>
     </li>
   {{/each}}
   </ul>
