--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -1,3 +1,7 @@
+<template name="productHeader">
+  <div class="back"><i class="fa fa-angle-left"></i></div>
+  <div class="title">商品详情</div>
+</template>
 <template name="product">
 <div class="product">
   <!-- Swiper start-->
