--- a/weMarketWeb/client/shopping/shopping.html
+++ b/weMarketWeb/client/shopping/shopping.html
@@ -1,3 +1,6 @@
+<template name="shoppingHeader">
+  <div class="title">购物车</div>
+</template>
 <template name="shopping">
 <div class="shopping">
   <ul class="shopping-list">
