--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -1,5 +1,15 @@
 <template name="home">
 <div class="home">
+  <!-- Swiper start-->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475869586530689271.png"/></div>
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475947014493634167.png"/></div>
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475869618740468734.png"/></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+  <!-- Swiper end -->
   <!-- 快速导航 -->
   <ul class="fast-nav">
     <li>
