--- a/weMarketWeb/client/shopping/shopping.html
+++ b/weMarketWeb/client/shopping/shopping.html
@@ -18,5 +18,7 @@
     </li>
   {{/each}}
   </ul>
+  
+  <a id="createOrder" href="javascript:;" class="weui-btn weui-btn_primary">立即结算</a>
 </div>
 </template>
