订单页数据填充

--- a/weMarketWeb/client/orders/createOrder.html
+++ b/weMarketWeb/client/orders/createOrder.html
@@ -19,60 +19,17 @@
   </div>
 
   <!-- 商品列表 -->
-  <div class="weui-panel">
-      <div class="weui-panel__hd">商品列表</div>
-
-      <div class="weui-panel__bd">
-          <div class="weui-media-box weui-media-box_text">
-              <h4 class="weui-media-box__title">标题一</h4>
-              <p class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</p>
-              <ul class="weui-media-box__info">
-                  <li class="weui-media-box__info__meta">文字来源</li>
-                  <li class="weui-media-box__info__meta">时间</li>
-                  <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">其它信息</li>
-              </ul>
-          </div>
-      </div>
-      <div class="weui-panel__bd">
-          <div class="weui-media-box weui-media-box_text">
-              <h4 class="weui-media-box__title">标题一</h4>
-              <p class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</p>
-              <ul class="weui-media-box__info">
-                  <li class="weui-media-box__info__meta">文字来源</li>
-                  <li class="weui-media-box__info__meta">时间</li>
-                  <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">其它信息</li>
-              </ul>
-          </div>
-      </div>
-
-  </div>
-
-  <div class="weui-form-preview">
-      <div class="weui-form-preview__hd">
-          <div class="weui-form-preview__item">
-              <label class="weui-form-preview__label">付款金额</label>
-              <em class="weui-form-preview__value">¥2400.00</em>
-          </div>
-      </div>
-      <div class="weui-form-preview__bd">
-          <div class="weui-form-preview__item">
-              <label class="weui-form-preview__label">商品</label>
-              <span class="weui-form-preview__value">电动打蛋机</span>
-          </div>
-          <div class="weui-form-preview__item">
-              <label class="weui-form-preview__label">标题标题</label>
-              <span class="weui-form-preview__value">名字名字名字</span>
-          </div>
-          <div class="weui-form-preview__item">
-              <label class="weui-form-preview__label">标题标题</label>
-              <span class="weui-form-preview__value">很长很长的名字很长很长的名字很长很长的名字很长很长的名字很长很长的名字</span>
-          </div>
-      </div>
-      <div class="weui-form-preview__ft">
-          <a class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">操作</a>
-      </div>
-  </div>
-
+  <div class="weui-panel__hd">商品列表</div>
+  <ul class="order-product-lists">
+    {{#each shoppings}}
+    <li>
+      <div class="product-name">{{product_name}}</div>
+      <div class="product-num"> × {{product_num}}</div>
+      <div class="product-price">￥ {{getProductTotalPrice}} 元</div>
+    </li>
+    {{/each}}
+  </ul>
+ 
   <div class="weui-cells__title">订单备注</div>
   <div class="weui-cells weui-cells_form">
       <div class="weui-cell">
@@ -82,6 +39,26 @@
           </div>
       </div>
   </div>
+  <div class="weui-panel__hd"></div>
+  <div class="weui-form-preview">
+      <div class="weui-form-preview__hd">
+          <div class="weui-form-preview__item">
+              <label class="weui-form-preview__label">付款金额</label>
+              <em class="weui-form-preview__value">¥ {{getTotalPrice}}</em>
+          </div>
+      </div>
+      <div class="weui-form-preview__bd">
+          <div class="weui-form-preview__item">
+              <label class="weui-form-preview__label">折扣</label>
+              <span class="weui-form-preview__value">无折扣</span>
+          </div>
+          <div class="weui-form-preview__item">
+              <label class="weui-form-preview__label">积分</label>
+              <span class="weui-form-preview__value">支付成功后，您将获得 0 积分</span>
+          </div>
+      </div>
+  </div>
+
   <a id="createOrder" href="javascript:;" class="weui-btn weui-btn_primary">提交订单</a>
   </div>
 </template>
