--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -13,25 +13,25 @@
   <!-- 快速导航 -->
   <ul class="fast-nav">
     <li>
-      <a href="/categories">
+      <a href="/categories/all?s={{seller_id}}">
         <img src="/home/nav_0.png"/>
         <p>全部分类</p>
       </a>
     </li>
     <li>
-      <a href="/orders">
+      <a href="/orders?s={{seller_id}}">
         <img src="/home/nav_1.png"/>
         <p>我的订单</p>
       </a>
     </li>
     <li>
-      <a href="/shopping">
+      <a href="/shopping?s={{seller_id}}">
         <img src="/home/nav_2.png"/>
         <p>购物车</p>
       </a>
     </li>
     <li>
-      <a href="/me">
+      <a href="/me?s={{seller_id}}">
         <img src="/home/nav_3.png"/>
         <p>个人中心</p>
       </a>
