创建订单相关页面

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -35,15 +35,15 @@
   </div>
   <ul class="myOrder">
     <li class="wallet">
-      <h4>0</h4>
+      <h4>{{orderStatus1Count}}</h4>
       <p>待付款</p>
     </li>
     <li class="wallet">
-      <h4>0</h4>
+      <h4>{{orderStatus3Count}}</h4>
       <p>待收货</p>
     </li>
     <li class="bitCon">
-      <h4>0</h4>
+      <h4>{{orderStatus5Count}}</h4>
       <p>待评价</p>
     </li>
     <li class="bitCon">
