我的页面跳转 订单列表

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -34,15 +34,15 @@
     <span>全部订单<i class="fa fa-angle-right fa-fw"></i></span>
   </div>
   <ul class="myOrder">
-    <li class="wallet">
+    <li class="wallet goOrderList">
       <h4>{{orderStatus1Count}}</h4>
       <p>待付款</p>
     </li>
-    <li class="wallet">
+    <li class="wallet goOrderList">
       <h4>{{orderStatus3Count}}</h4>
       <p>待收货</p>
     </li>
-    <li class="bitCon">
+    <li class="bitCon goOrderList">
       <h4>{{orderStatus5Count}}</h4>
       <p>待评价</p>
     </li>
