订单详情页UI

--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -19,7 +19,7 @@
       </a>
     </li>
     <li>
-      <a href="/orders?s={{seller_id}}">
+      <a href="/orders/list?s={{seller_id}}">
         <img src="/home/nav_1.png"/>
         <p>我的订单</p>
       </a>
