--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -29,7 +29,7 @@
     </li>
   </ul>
 
-  <div class="my-ul-title">
+  <div class="my-ul-title goOrderList">
     <h4>我的订单</h4>
     <span>全部订单<i class="fa fa-angle-right fa-fw"></i></span>
   </div>
