收货地址管理UI base1

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -51,5 +51,15 @@
       <p>退换货</p>
     </li>
   </ul>
+
+  <div class="weui-cells goAddrList">
+    <div class="weui-cell">
+      <div class="weui-cell__hd"><img src=""></div>
+      <div class="weui-cell__bd">
+        <p>收货地址管理</p>
+      </div>
+      <div class="weui-cell__ft"><i class="fa fa-angle-right fa-fw"></i></div>
+    </div>
+  </div>
 </div>
 </template>
