--- a/weMarketWeb/client/me/addr/addrLIst.html
+++ b/weMarketWeb/client/me/addr/addrLIst.html
@@ -14,5 +14,19 @@
       </div>
     </a>
   </div>
+  
+  <div class="weui-panel weui-panel_access">
+    <div class="weui-panel__bd">
+      {{#each lists}}
+      <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+        <div class="weui-media-box__bd">
+          <h4 class="weui-media-box__title">{{contact_name}} <span> {{contact_mobile}}</span></h4>
+          <p class="weui-media-box__desc">{{contact_city}} {{contact_street}}</p>
+        </div>
+      </a>
+      {{/each}}
+    </div>
+  </div>
+
 </div>
 </template>
