--- a/weMarketWeb/client/me/addr/addrNew.html
+++ b/weMarketWeb/client/me/addr/addrNew.html
@@ -9,7 +9,7 @@
     <div class="weui-cell">
       <div class="weui-cell__hd"><label class="weui-label">联系人</label></div>
       <div class="weui-cell__bd">
-        <input class="weui-input" type="text"  placeholder="名字">
+        <input id="contact_name" class="weui-input" type="text"  placeholder="名字">
       </div>
     </div>
     <div class="weui-cell">
@@ -17,7 +17,7 @@
         <label class="weui-label">手机号码</label>
       </div>
       <div class="weui-cell__bd">
-        <input class="weui-input" type="tel" placeholder="请输入手机号">
+        <input id="contact_mobile" class="weui-input" type="tel" placeholder="请输入手机号">
       </div>
     </div>
     <div class="weui-cell">
@@ -25,7 +25,7 @@
         <label class="weui-label">选择地区</label>
       </div>
       <div class="weui-cell__bd">
-        <input class="weui-input" id="city-picker" type="text" placeholder="地区信息">
+        <input class="weui-input" id="contact_city" type="text" placeholder="地区信息">
       </div>
     </div>
     <div class="weui-cell">
@@ -33,7 +33,7 @@
         <label class="weui-label">邮政编码</label>
       </div>
       <div class="weui-cell__bd">
-        <input class="weui-input" type="number" placeholder="邮政编码">
+        <input id="postal_code" class="weui-input" type="number" placeholder="邮政编码">
       </div>
     </div>
   </div>
@@ -41,15 +41,15 @@
   <div class="weui-cells weui-cells_form">
     <div class="weui-cell">
       <div class="weui-cell__bd">
-        <textarea class="weui-textarea" placeholder="街道门牌信息" rows="2"></textarea>
+        <textarea id="contact_street" class="weui-textarea" placeholder="街道门牌信息" rows="2"></textarea>
       </div>
     </div>
   </div>
 
-  <a href="javascript:;" class="weui-btn weui-btn_primary" style="margin: 10px; height: 40px; line-height: 40px;background: #1cbb7f !important;">保 存</a>
+  <div id="save" class="weui-btn weui-btn_primary" style="margin: 10px; height: 40px; line-height: 40px;background: #1cbb7f !important;">保 存</div>
 </div>
 <script>
-$("#city-picker").cityPicker({
+$("#contact_city").cityPicker({
   title: "选择地区"
 });
 </script>
