--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -49,7 +49,7 @@
   </ul>
 
   <div class="filter-btn dis-box">
-    <a href="" class="filter-btn-flow filter-btn-a">
+    <a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
       <i class="fa fa-shopping-cart"></i>
       <p style="margin: 0;">购物车</p>
     </a>
