商品图片列表保存

--- a/weMarketAdmin/client/products/productsAdd.html
+++ b/weMarketAdmin/client/products/productsAdd.html
@@ -40,7 +40,7 @@
             {{/if}}
             {{#each images}}
             <li class="imageLists">
-              <img src="{{imgUrl}}"/>
+              <img src="{{this}}"/>
             </li>
             {{/each}}
           </ul>
